test: added main e2e tests

--- a/examples/index.html
+++ b/examples/index.html
@@ -15,35 +15,36 @@
             crossorigin=""></script>
     <script src="../dist/leaflet-simple-map-screenshoter.js"></script>
     <style>
-        html {
-            height: 100%;
-            width: 100%;
+        .maps {
+            display: flex;
+            justify-content: space-around;
         }
 
-        #mapSimple {
+        .maps > div > div {
             display: block;
-            margin: 50px;
+            margin: 10px;
             height: 300px;
-            min-width: 300px;
-        }
-
-        #map {
-            display: block;
-            margin: 50px 50px 10px 50px;
-            height: 300px;
-            min-width: 300px;
+            width: 300px;
         }
     </style>
 </head>
 
 <body>
-<div id="mapSimple"></div>
-<div id="map"></div>
-<button id="screenMap">Take and download screen</button>
-<button id="screenMapAndPast">Take screen and past to body</button>
+<div id="mapsScreeningState"></div>
+<div class="maps">
+    <div>
+        <div id="mapSimple"></div>
+    </div>
+    <div>
+        <div id="map"></div>
+        <button id="screenMap">Take and download screen</button>
+        <button id="screenMapAndPast">Take screen and past to body</button>
+        <div id="screens"></div>
+    </div>
+</div>
 <script>
-
-    var mapSimple = L.map('mapSimple').setView([40, -74], 6);
+    /* show screen btn in panel */
+    var mapSimple = L.map('mapSimple').setView([40, -74], 2);
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(mapSimple);
 
     L.simpleMapScreenshoter({
@@ -52,13 +53,26 @@
         }
     }).addTo(mapSimple)
 
+    // add loaders
+    mapSimple.on('simpleMapScreenshoter.takeScreen', function () {
+        document.getElementById('mapsScreeningState').innerHTML += 'screening...<br>'
+    })
+    mapSimple.on('simpleMapScreenshoter.done', function () {
+        document.getElementById('mapsScreeningState').innerHTML += 'screen end...<br>'
+    })
+    mapSimple.on('simpleMapScreenshoter.error', function (event) {
+        console.error(event.e)
+        document.getElementById('mapsScreeningState').innerHTML += event.e.toString() + '<br>'
+    })
 
-    var map = L.map('map').setView([56, 37], 6);
+    /* custom usage */
+    var map = L.map('map').setView([56, 37], 2);
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
     var simpleMapScreenshoter = L.simpleMapScreenshoter({
         hidden: true
     }).addTo(map)
 
+    // return as blob
     document.getElementById('screenMap').addEventListener('click', function () {
         simpleMapScreenshoter.takeScreen('blob', {
             caption: function () {
@@ -77,6 +91,7 @@
         })
     })
 
+    // return as image
     document.getElementById('screenMapAndPast').addEventListener('click', function () {
         simpleMapScreenshoter.takeScreen('image', {
             caption: function () {
@@ -85,10 +100,18 @@
         }).then(image => {
             var img = document.createElement('img')
             img.src = image
-            document.body.appendChild(img)
+            document.getElementById('screens').appendChild(img)
         }).catch(e => {
             alert(e.toString())
         })
+    })
+
+    // listen on fired error or catch error in prev promise
+    map.on('simpleMapScreenshoter.error', function (event) {
+        var el = document.createElement('div')
+        el.classList.add('create-screen-error')
+        el.innerHTML = event.e.toString()
+        document.getElementById('screens').appendChild(el)
     })
 </script>
 </body>
