--- a/examples/index.html
+++ b/examples/index.html
@@ -14,6 +14,7 @@
             integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
             crossorigin=""></script>
     <script src="../dist/leaflet-simple-map-screenshoter.js"></script>
+    <script src="https://unpkg.com/file-saver/dist/FileSaver.js"></script>
     <style>
         .maps {
             display: flex;
@@ -83,13 +84,7 @@
                 return 'Hello world'
             }
         }).then(blob => {
-            var a = document.createElement('a')
-            var url = window.URL.createObjectURL(blob)
-            document.body.appendChild(a)
-            a.href = url
-            a.download = 'screen.png'
-            a.click()
-            window.URL.revokeObjectURL(url)
+            saveAs(blob, 'screen.png')
         }).catch(e => {
           alert(e.toString())
         })
