fix: #27 FitBounds + takescreen results in corrupted Image

--- a/examples/index.html
+++ b/examples/index.html
@@ -106,7 +106,7 @@
     </div>
 
     <div>
-        <h3>Advanced example<h3>
+        <h3>Advanced example</h3>
         <div id="map"></div>
         <button id="screenMap">Take and download screen</button>
         <button id="screenMapAndPast">Take screen and past to body</button>
